update controllers & add mapper & fix user repository